[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameboard.gd" type="Script" id=1]
[ext_resource path="res://core/hub.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tile_sets/testing_tileset.tres" type="TileSet" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[node name="Gameboard" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Hub" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ScreenEdgeBarrier" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="BarrierTop" type="CollisionShape2D" parent="ScreenEdgeBarrier"]
shape = SubResource( 1 )

[node name="BarrierBottom" type="CollisionShape2D" parent="ScreenEdgeBarrier"]
shape = SubResource( 2 )

[node name="BarrierRight" type="CollisionShape2D" parent="ScreenEdgeBarrier"]
shape = SubResource( 3 )

[node name="BarrierLeft" type="CollisionShape2D" parent="ScreenEdgeBarrier"]
shape = SubResource( 4 )

[node name="CanvasLayer" type="Node" parent="."]
